feat: styling subscription button

--- a/styles.css
+++ b/styles.css
@@ -155,6 +155,23 @@ body {
   color: white;
 }
 
+.subscription .button {
+  height: 45px;
+  margin-top: 20px;
+
+  background-color: hsl(71, 73%, 54%);
+  border-radius: 5px;
+
+  /* another way to center text :) */
+  text-align: center;
+  line-height: 45px;
+
+  font-weight: 600;
+  color: white;
+
+  box-shadow: 2px 2px 4px rgba(0, 0, 0, 30%);
+}
+
 /* reason grid area */
 
 .main-container > .reason {
