fix: add max-width instead of fixed width to main container so that it is responsive at breakpoints

--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,7 @@ body {
 
 .main-container {
   height: 480px;
-  width: 640px;
+  max-width: 640px;
 
   display: grid;
   grid-template-rows: 1fr 1fr;
