--- a/styles.css
+++ b/styles.css
@@ -182,6 +182,11 @@ body {
   border-radius: 0px 0px 8px 0px;
   background-color: hsl(179, 62%, 46%);
   grid-area: reason;
+
+  /* centering the text-content */
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .reason .text-content {
@@ -190,6 +195,8 @@ body {
   display: flex;
   flex-direction: column;
   align-items: start;
+  justify-content: center;
+  height: 100%;
 }
 
 /* reason heading styling and spacing same */
@@ -202,4 +209,101 @@ body {
   font-size: 0.9rem;
   line-height: 1.2rem;
   letter-spacing: 0.05rem;
+}
+
+@media (max-width: 640px) {
+  .main-container {
+    grid-template: repeat(3, 1fr) / 1fr; /* Shorthand for rows/columns */
+    grid-template-areas: none; /* Disable area mapping */
+
+    width: 300px;
+    height: 100vh;
+  }
+
+  /* it seems this is not required, adding for clarity */
+  .message,
+  .subscription,
+  .reason {
+    grid-area: none;
+  }
+
+  /* explicity place grid items */
+
+  .main-container > .message {
+    grid-row: 1/2;
+    grid-column: 1/2;
+  }
+
+  .main-container > .subscription {
+    grid-row: 2/3;
+    grid-column: 1/2;
+  }
+
+  .main-container > .reason {
+    grid-row: 3/4;
+    grid-column: 1/2;
+  }
+
+  /* adjust margin */
+
+  .main-container > .message .text-box {
+    margin: 25px;
+    height: 100%;
+  }
+
+  .main-container > .subscription .text-and-button-box {
+    margin: 25px;
+    width: 100%;
+  }
+
+  .main-container > .reason .text-content {
+    margin: 25px;
+    width: 100%;
+  }
+
+  /* adjust typography */
+
+  .message .text-box .heading {
+    color: hsl(179, 62%, 43%);
+    font-size: 1.2rem;
+    font-weight: 500;
+
+    /* uneven spacing */
+    margin-bottom: 30px;
+  }
+
+  .message .text-box .subheading {
+    color: hsl(71, 73%, 54%);
+    font-size: 1rem;
+    font-weight: 500;
+
+    /* uneven spacing */
+    margin-bottom: 10px;
+  }
+
+  .message .text-box .description {
+    line-height: 1.5rem;
+
+    font-size: 0.8rem;
+    font-weight: 500;
+    opacity: 0.3;
+  }
+
+  /* border radius */
+
+  .main-container {
+    border-radius: 5px;
+  }
+
+  .main-container > .message {
+    border-radius: 5px 5px 0px 0px;
+  }
+
+  .main-container > .subscription {
+    border-radius: 0px;
+  }
+
+  .main-container > .reason {
+    border-radius: 0px 0px 5px 5px;
+  }
 }
